src/main/java/sample/newsdata/api/support/error/CoreApiErrorCode.java
package sample.newsdata.api.support.error;

public enum CoreApiErrorCode {

    E500,
    E1000,
    E1001,
    E1002,
    E1003

}
